--- a/Lab2/avenue_code/.gitignore
+++ b/Lab2/avenue_code/.gitignore
@@ -1,4 +1,4 @@
-CMakeFiles/*
-build/*
-CMakeCache.txt
-Makefile
+Lab2/avenue_code/CMakeFiles/*
+Lab2/avenue_code/build/*
+Lab2/avenue_code/CMakeCache.txt
+Lab2/avenue_code/Makefile
